inserito immagine "slide"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <!-- Navbar FIXED -->
       <nav class="container-fluid adp-bg-green">
-        <div class="row debug-nav wrapper-80">
+        <div class="row debug-nav wrapper-70">
            <div class="col-xs-6 col-lg-4">
              <span>logo</span>
              <span>DigitalOcean</span>
@@ -30,7 +30,7 @@
       </nav>
       <!-- jumbotron -->
       <div class="container-fluid adp-bg-blue">
-        <div class="row wrapper-80 debug-jumbo">
+        <div class="row wrapper-70 debug-jumbo">
           <div class="col-xs-12 col-sm-6">
             <h2>The simplest cloud platform for developers & teams</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, quis reprehenderit soluta molestias culpa praesentium qui vel sapiente mollitia quas ut cupiditate odit repellat voluptatem magnam eveniet temporibus. Et, repellendus.</p>
@@ -41,18 +41,84 @@
         </div>
       </div>
       <!-- jumbotron-footer -->
-      <div class="container-fluid adp-bg-gray">
-        <div class="row debug-jumbo-foot"></div>
+      <div class="container-fluid adp-bg-gray adp-white">
+        <div class="wrapper-70">
+        <h3 class="text-capitalize text-center">Innovative Businesses trust digitalocean</h3>
+        <div class="row debug-jumbo-foot text-center">
+          <div class="col-xs-6 col-sm-4">docker</div>
+          <div class="col-xs-6 col-sm-4">gitlab</div>
+          <div class="col-xs-6 col-sm-4">slack</div>
+          <div class="col-xs-6 col-sm-4">Hashicorp</div>
+          <div class="col-xs-6 col-sm-4">wework</div>
+          <div class="col-xs-6 col-sm-4">splunk</div>
+        </div>
+        <div class="text-capitalize text-center"><a class="adp-link-nostyle" href="#">View customer stories</a></div>
       </div>
-
-
+    </div>
     </header>
     <!-- HEADER -->
-    
+
     <!-- MAIN -->
+    <main class="container-fluid">
      <!-- Section (deploy) -->
-     <!-- Section (designed) -->
+      <div class="text-center wrapper-70">
+        <h3>Deploy and scale seamlessly</h3>
+        <p>Our optimized configuration process saves your team time when running and scaling distributed applications, Ai & machin learning workloads, hosted services, client websites, or CI/CD enviroments.</p>
+      </div>
+
+     
+      <div class="row wrapper-70 text-center">
+        <div class="col-xs-12 col-sm-4">
+          <ul>
+            <li>Deploy</li>
+            <li>Manage</li>
+            <li>Secure</li>
+            <li>Scale</li>
+            <li>Monitor</li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <img src="img/cluster-deploy.svg" alt="">
+          <h4>Cluster deployments</h4>
+          <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <img src="img/optimized-compute.svg" alt="">
+          <h4>Optimized compute types</h4>
+          <p>Get the compute resources you need with Stardard or Optimized Droplets.</p>
+        </div>
+        <div class="col-xs-12 col-sm-offset-4 col-sm-4">
+          <img src="img/one-click.svg" alt="">
+          <h4>One-click apps</h4>
+          <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <img src="img/global.svg" alt="">
+          <h4>Global availability</h4>
+          <p>Deploy to any of our data center regions around the world</p>
+        </div>
+      </div>
+      <!-- Section (designed) -->
+      <div class="container-fluid adp-bg-aliceblue text-center">
+        <div class="wrapper-70">
+          <div>
+            <h3>Designed for developers</h3>
+            <p>Build more and spend less time managing your   infrastructure with our easy-to-use control panel and API.</p>
+          </div>
+        <div class="row">
+          <div class="hidden-xs col-sm-3 text-right">asdasd</div>
+          <div class="col-xs-12 col-sm-6">
+            <img class="adp-img-fit" src="img/slide.jpg" alt="">
+          </div>
+          <div class="hidden-xs col-sm-3 text-left">asdasd</div>
+        </div>
+      </div>
+      </div>
      <!-- Section (feutures) -->
+
+
+    </main>
+
     <!-- MAIN -->
 
     <!-- FOOTER -->
