--- a/index.html
+++ b/index.html
@@ -243,8 +243,25 @@
           </div>
         </div>
 
-    
+        <div class="container-fluid adp-bg-aliceblue text-center">
+          <div class="wrapper-70">
+            <div>
+              <h3>Designed for developers</h3>
+              <p>Build more and spend less time managing your   infrastructure with our easy-to-use control panel and API.</p>
+            </div>
+          <div class="row">
+            <div class="hidden-xs col-sm-3 text-right">asdasd</div>
+            <div class="col-xs-12 col-sm-6">
+              <img class="adp-img-fit" src="img/wework.svg" alt="">
+            </div>
+            <div class="hidden-xs col-sm-3 text-left">asdasd</div>
+          </div>
+          <p class="text-center">Create compute servers in 55 seconds or less.</p>
+          <div class="text-center">puntini</div>
+        </div>
+        </div>
 
+      
     <!-- MAIN -->
 
     <!-- FOOTER -->
