--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">  
 
   </head>
@@ -16,27 +19,59 @@
     <!-- HEADER -->
     <header>
       <!-- Navbar FIXED -->
-      <nav class="container-fluid adp-bg-green">
+      <nav class="container-fluid">
         <div class="row debug-nav wrapper-70 wrapper-100">
-           <div class="col-xs-6 col-lg-4">
-             <span>logo</span>
-             <span>DigitalOcean</span>
+           <div class="col-xs-6 col-lg-3">
+             <img class="adp-img-logo" src="img/logo.png" alt="logo">
+             
             </div>
-            <div class="col-lg-4 hidden-sm hidden-xs">asdas</div>
-           <div class="col-xs-6 col-lg-4">
-             <div class=".adp-nav-menu hidden-lg">asdasd</div>
+            <div class="col-md-5 hidden-sm hidden-xs adp-nav-list">
+              <ul>
+                <li><a href="#">Products <i class="fas fa-chevron-down"></i></a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Community <i class="fas fa-chevron-down"></i></a></li>
+                <li><a href="#">Pricing</a></li>
+              </ul>
+            </div>
+
+           <div class="col-xs-6 col-md-4 text-right">
+
+             <div class="adp-nav-menu hidden-md hidden-lg"><a class="adp-btn-xs" href="#"><i class="fas fa-bars"></i></a>
+            </div>
+
+             <div class="hidden-sm hidden-xs adp-nav-list">
+              <ul>
+              <li><a href="#">Docs</a></li>
+              <li><a class="adp-btn-xs" href="#">Support <i class="fas fa-chevron-down"></i></a></li>
+              <li><a href="#">Login</a></li>
+              <li><a class="adp-btn-nav" href="#">Sign Up</a></li>
+               </ul>
+          </div>
            </div>
+
         </div>
       </nav>
       <!-- jumbotron -->
-      <div class="container-fluid adp-bg-blue adp-white">
-        <div class="row wrapper-70 debug-jumbo">
-          <div class="col-xs-12 col-sm-6">
+      <div class="container-fluid adp-white adp-bg-ocean">
+        <div class="row wrapper-70">
+          <div class="col-xs-12 col-lg-6">
             <h2>The simplest cloud platform for developers & teams</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, quis reprehenderit soluta molestias culpa praesentium qui vel sapiente mollitia quas ut cupiditate odit repellat voluptatem magnam eveniet temporibus. Et, repellendus.</p>
+            <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, wheter you're running one virtual machine or ten thousand.</p>
           </div>
-          <div class="col-xs-12 col-sm-6">
-            form Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius fugit ullam in, iusto illum, quis ipsam quo distinctio aut quos totam inventore. Corporis, sapiente nihil. Tenetur reiciendis error a magni.
+          <!-- FORM -->
+          <div class="col-xs-12 col-lg-6 text-center adp-form">
+            <h3 class="adp-black">Deploy your app in seconds.</h3>
+            <h4 class="adp-cornflowerblue">Get started now.</h4>
+            <form>
+              <input class="adp-input" type="email" placeholder="Email">
+              <input class="adp-input" type="password" name="password" id="password" placeholder="Password">
+              <div><a class="adp-input" href="#">Create your account</a></div>
+              <div class="adp-input adp-rel">
+                <img class="adp-abs" src="img/google-icon.png" alt="google">
+                <a class="" href="#">Sign up with Google</a>
+              </div>
+            </form>
+
           </div>
         </div>
       </div>
@@ -45,12 +80,12 @@
         <div class="wrapper-70">
         <h3 class="text-capitalize text-center">Innovative Businesses trust digitalocean</h3>
         <div class="row debug-jumbo-foot text-center">
-          <div class="col-xs-6 col-sm-4">docker</div>
-          <div class="col-xs-6 col-sm-4">gitlab</div>
-          <div class="col-xs-6 col-sm-4">slack</div>
-          <div class="col-xs-6 col-sm-4">Hashicorp</div>
-          <div class="col-xs-6 col-sm-4">wework</div>
-          <div class="col-xs-6 col-sm-4">splunk</div>
+          <div class="col-xs-6 col-sm-2">docker</div>
+          <div class="col-xs-6 col-sm-2">gitlab</div>
+          <div class="col-xs-6 col-sm-2">slack</div>
+          <div class="col-xs-6 col-sm-2">Hashicorp</div>
+          <div class="col-xs-6 col-sm-2">wework</div>
+          <div class="col-xs-6 col-sm-2">splunk</div>
         </div>
         <div class="text-capitalize text-center"><a class="adp-link-nostyle" href="#">View customer stories</a></div>
       </div>
@@ -118,8 +153,8 @@
       </div>
      <!-- Section (feutures) -->
      <div class="wrapper-70 text-center">
-       <h3>The feature your business needs</h3>
-      <div class="row">
+        <h3>The feature your business needs</h3>
+        <div class="row">
         <div class="col-xs-12 col-sm-4">
           <img src="img/pred-pricing.svg" alt="pred-pricing">
           <h4>Predictable pricing</h4>
@@ -138,6 +173,7 @@
           <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all service.</p>
           <a href="#">Security <i class="fas fa-angle-right"></i></a>
         </div>
+        </div>
       </div>
     </main>
     <!-- service -->
@@ -145,7 +181,7 @@
         <div class="wrapper-70 text-center adp-white">
           <h3>Service your customers around the world from 12 regions.</h3>
           <!-- Prima Tabella -->
-          <div class="adp-margin-bottom col-xs-12 col-lg-6">
+          <div class="adp-margin-bottom col-xs-12 col-md-5">
 
             <!-- Prima riga -->
             <div class="row adp-row-table">
@@ -198,7 +234,7 @@
           </div>
 
           <!-- Seconda Tabella -->
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-md-offset-2 col-md-5">
 
             <!-- Prima riga -->
             <div class="row adp-row-table">
